Completed Junie tasks and now movement not working properly