@@ -1,6 +1,7 @@
 package military;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 /**
  * Centralized configuration for filesystem locations and path resolution.
@@ -10,14 +11,14 @@ public final class Config {
     private Config() {}
 
     public static Path mapsDir() {
-        return Path.of("Maps");
+        return Paths.get("Maps");
     }
 
     public static Path resourcesDir() {
-        return Path.of("Resources");
+        return Paths.get("Resources");
     }
 
     public static Path soundsDir() {
-        return Path.of("sounds");
+        return Paths.get("sounds");
     }
 }
